Fix horizontal overflow issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -120,9 +120,13 @@
   font-size: 3rem;
 }
 
+.main__projectContainer {
+  width: 100%;
+}
+
 .main__projects {
   margin: 0 10px;
-  width: 5%;
+  width: 6%;
   border-radius: 5px;
   overflow: hidden;
   -webkit-transition: width 0.5s ease-in-out 0.1s;
