--- a/resources/scss/layout/_main.scss
+++ b/resources/scss/layout/_main.scss
@@ -32,11 +32,12 @@
 
 .main__projectContainer {
     @extend %flex-center;
+    width: 100%;
 }
 
 .main__projects {
     margin: 0 10px;
-    width: 5%;
+    width: 6%;
     border-radius: $border-radius-sm;
     overflow: hidden;
     transition: width 0.5s ease-in-out 0.1s;
